ngDialog Flicker in IE - fixed partially

--- a/Content/ngDialog/ngDialog-theme-default.css
+++ b/Content/ngDialog/ngDialog-theme-default.css
@@ -16,12 +16,14 @@
   0% {
     opacity: 0;
     -webkit-transform: translateY(-40px);
+    -ms-transform: translateY(-40px);
     transform: translateY(-40px);
   }
 
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -35,6 +37,7 @@
 
   100% {
     opacity: 0;
+    display:none;
     -webkit-transform: translateY(-40px);
     transform: translateY(-40px);
   }
@@ -44,12 +47,15 @@
   0% {
     opacity: 1;
     -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
     transform: translateY(0);
   }
 
   100% {
     opacity: 0;
+    display:none;
     -webkit-transform: translateY(-40px);
+    -ms-transform: translateY(-40px);
     transform: translateY(-40px);
   }
 }
@@ -60,8 +66,8 @@
 }
 
 .ngdialog.ngdialog-theme-default.ngdialog-closing .ngdialog-content {
-  -webkit-animation: ngdialog-flyout .5s;
-  animation: ngdialog-flyout .5s;
+  -webkit-animation: ngdialog-flyout .5s forwards;
+  animation: ngdialog-flyout .5s forwards;
 }
 
 .ngdialog.ngdialog-theme-default .ngdialog-content {
@@ -139,6 +145,7 @@
 .ngdialog.ngdialog-theme-default .ngdialog-input input[type="password"]:focus,
 .ngdialog.ngdialog-theme-default .ngdialog-input input[type="email"]:focus,
 .ngdialog.ngdialog-theme-default .ngdialog-input input[type="url"]:focus {
+  -webkit-box-shadow: inset 0 0 0 2px #8dbdf1;
   box-shadow: inset 0 0 0 2px #8dbdf1;
   outline: none;
 }
